...
                                        <size key="shadowOffset" width="0.0" height="2"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kU4-1Q-5BP">
                                        <rect key="frame" x="20" y="220" width="32" height="32"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" image="StartOverIcon" backgroundImage="SmallButton"/>
                                        <connections>
                                            <action selector="startNewGame" destination="BYZ-38-t0r" eventType="touchUpInside" id="V2x-th-3Gw"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0kv-oX-LcJ">
                                        <rect key="frame" x="470" y="220" width="32" height="32"/>
...
                                        <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="22"/>
                                        <color key="textColor" systemColor="secondarySystemBackgroundColor"/>
                                        <nil key="highlightedColor"/>
                                        <color key="shadowColor" systemColor="labelColor"/>
                                        <size key="shadowOffset" width="0.0" height="2"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Score:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y5Y-GC-ubb">
                                        <rect key="frame" x="95" y="223" width="56" height="26"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="22"/>
                                        <color key="textColor" systemColor="secondarySystemBackgroundColor"/>
                                        <nil key="highlightedColor"/>
                                        <color key="shadowColor" systemColor="labelColor"/>
...
                                        <rect key="frame" x="159" y="223" width="74" height="27"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="22"/>
                                        <color key="textColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Round:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lVQ-TW-JqZ">
                                        <rect key="frame" x="319" y="224" width="67" height="26"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="22"/>
                                        <color key="textColor" systemColor="secondarySystemBackgroundColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fid-RE-0sT">
                                        <rect key="frame" x="214" y="152" width="92" height="37"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="22"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <size key="titleShadowOffset" width="2" height="2"/>
                                        <state key="normal" title="Hit me!" backgroundImage="Button-Normal">
                                            <color key="titleColor" red="0.37647058823529411" green="0.11764705882352941" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <color key="titleShadowColor" red="1" green="1" blue="0.9882352941176471" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
                                        </state>
                                        <state key="highlighted" backgroundImage="Button-Highlighted"/>
                                        <connections>
                                            <action selector="showAlert" destination="BYZ-38-t0r" eventType="touchUpInside" id="xqG-vc-6EX"/>
...
