...
    @IBAction func showAlert(){
        let guessValue = Int(slider.value.rounded())
       
        let result = gameController.checkAndUpdateScore(guess: guessValue)
        
        let alert = UIAlertController(title: result.title, message: result.message, preferredStyle: .alert)
        let action = UIAlertAction(title: "Ok", style: .default, handler:{(action:UIAlertAction)->Void in self.startNewRound()})
        alert.addAction(action)
        
        present(alert, animated: true, completion: nil)
    }
    
    @IBAction func startNewGame(){
...
